--- a/apoio_client/src/app/components/Table/style.css
+++ b/apoio_client/src/app/components/Table/style.css
@@ -10,12 +10,16 @@
     
 }
 
+.test{
+    background-color: var(--cor-light);
+}
+
 .toolbar {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: start;
-    background-color: var(--cor-rose);
+    background-color: transparent;
     width: 100%;
     height: 6%;
 
@@ -24,18 +28,17 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 1vw;
+        height: 100%;
+        width: 100%;
 
         .export {
-            margin: 10px 0;
-            height: 1.5vw;
-            width: 6vw;
+            height: 100%;
+            width: 100%;
             font-size: 0.7vw;
             background-color: #4CAF50;
             color: white;
             border: none;
             cursor: pointer;
-            border-radius: 5px;
             transition: 0.1s;
             font-weight: bold;
         }
@@ -45,7 +48,7 @@
         }
 
         .export:active {
-            padding: 9px 19px;
+            font-size: 0.6vw;
             background-color: #45a049;
         }
     }
